[package]
name = "rltk"
version = "0.1.0"
authors = ["Simon <simonwoodburyforget@gmail.com>"]
edition = "2018"

[dependencies]
rltk = "0.5.15"
specs = { version = "0.15.0" }
specs-derive = "0.4.0"

[target.'cfg(any(target_arch = "wasm32"))'.dependencies]
web-sys = { version = "0.3", features=["console"] }
wasm-bindgen = "0.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

