[package]
name = "wasm-experiment"
version = "0.1.1"
authors = ["Simon <simonwoodburyforget@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
seed = "0.5"
html5ever = "*"