[package]
name = "triangle"
version = "0.1.0"
authors = ["Simon <simonwoodburyforget@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = { version = "*", default-features=false }

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.22.0", optional = true }
sdl2 = { version = "0.32", optional = true }

[features]
default = ["web-sys"]
web-sys = ["web_sys", "wasm-bindgen", "glow/web-sys"]
stdweb = ["std_web", "webgl_stdweb", "glow/stdweb"]
window-sdl2 = ["sdl2", "glow/sdl2"]
window-glutin = ["glutin", "glow/glutin"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_sys = { version = "0.3", package = "web-sys", features=["console"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
std_web  = { version = "0.4.18", package = "stdweb", optional = true }
webgl_stdweb = { version = "0.3", optional = true }

