[package]
name = "necklace_matching"
version = "0.1.0"
authors = ["Simon <simonwoodburyforget@gmail.com>"]
edition = "2018"
license = "MPL"

[dependencies]
criterion = "0.3"
rand = "0.7"
num = "0.2"
num-bigint = "0.2.6"
num-traits = "0.2.11"
num-integer = "0.1"

[[bench]]
name = "main"
harness = false